--- a/QuadroScrum/res/values/strings.xml
+++ b/QuadroScrum/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
 
     <string name="app_name">QuadroScrum</string>
+    <string name="login">Login</string>
+    <string name="senha">Senha</string>
+    <string name="entrar">Entrar</string>
+    <string name="inserir">Inserir</string>
 
 </resources>
