--- a/QuadroScrum/res/values/strings.xml
+++ b/QuadroScrum/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="login">Login</string>
     <string name="senha">Senha</string>
     <string name="entrar">Entrar</string>
-    <string name="inserir">Inserir</string>
+    <string name="criar_usuario">Inserir novo usuario</string>
+    <string name="email">Email</string>
 
 </resources>
